Big change commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,11 @@
     <string name="app_name">Court Counter</string>
 
     <string name="team_a">Team A</string>
+    <string name="team_b">Team B</string>
     <string name="score_a">0</string>
+    <string name="score_b">0</string>
     <string name="plus_3">+3 Points</string>
+    <string name="reset">reset</string>
     <string name="plus_2">+2 Points</string>
     <string name="free_throw">free throw</string>
     <string name="action_settings">Settings</string>
